# NetVision

./: Dockerfile  Dockerfile-client  README.md  alembic.ini  docker-compose-dev.yaml  pyproject.toml  pytest.ini
app/: config.py  main.py
app/api/: dependencies.py  interfaces.py  repositories.py  responses.py  routes.py  schemas.py  services.py
app/database/: db.py  models.py
app/database/alembic/: env.py
app/database/alembic/versions/: b2994e0a9bcd_test.py
app/utils/: decorators.py  funcs.py
client/: main.py
